fix issue with splitpanes splitter overflowing power tree scrollbar element

--- a/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/splitpanes.scss
+++ b/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/splitpanes.scss
@@ -90,7 +90,7 @@
       margin-left: -1px;
 
       &:before {
-        left: -5px;
+        left: 0px;
         right: -5px;
         height: 100%;
       }
